web/versioned_docs/version-0.24/auth/social-auth/slack.md
---
title: Slack
---

import useBaseUrl from '@docusaurus/useBaseUrl';
import DefaultBehaviour from './\_default-behaviour.md';
import OverrideIntro from './\_override-intro.md';
import OverrideExampleIntro from './\_override-example-intro.md';
import UsingAuthNote from './\_using-auth-note.md';
import WaspFileStructureNote from './\_wasp-file-structure-note.md';
import GetUserFieldsType from './\_getuserfields-type.md';
import { CardLink } from '@site/src/components/CardLink';
import SlackData from '../entities/\_slack-data.md';
import AccessingUserDataNote from '../\_accessing-user-data-note.md';
import SocialLoginClientPages from './\_social-login-client-pages.md';
import Collapse from '@site/src/components/Collapse';

Wasp supports Slack Authentication out of the box.

Using Slack Authentication is perfect when you build a control panel for a Slack app.

Let's walk through enabling Slack Authentication, explain some quirks, explore default settings and show how to override them.

## Setting up Slack Auth

Enabling Slack Authentication comes down to a series of steps:

1. Enabling Slack authentication in the Wasp file.
2. Adding the `User` entity.
3. Creating Slack App.
4. Adding the necessary Routes and Pages
5. Using Auth UI components in our Pages.

<WaspFileStructureNote />

### 1. Enabling Slack authentication in the Wasp file.

Now let's properly configure the Auth object:

```ts title="main.wasp.ts"
import { app } from "@wasp.sh/spec"

export default app({
  name: "myApp",
  wasp: { version: "{latestWaspVersion}" },
  title: "My App",
  head: ["<link rel='icon' href='/favicon.ico' />"],
  auth: {
    // highlight-next-line
    // 1. Specify the User entity  (we'll define it next)
    // highlight-next-line
    userEntity: "User",
    methods: {
      // highlight-next-line
      // 2. Enable Slack Auth
      // highlight-next-line
      slack: {}
    },
    onAuthFailedRedirectTo: "/login"
  },
  // ...
})
```

### 2. Add the User Entity

Let's now define the `auth.userEntity` entity in the `schema.prisma` file:

```prisma title="schema.prisma"
// 3. Define the user entity
model User {
  // highlight-next-line
  id Int @id @default(autoincrement())
  // Add your own fields below
  // ...
}
```

### 3. Creating a Slack App

To use Slack as an authentication method, you'll first need to create a Slack App and provide Wasp with your client key and secret. Here's how you do it:

1. Log into your Slack account and navigate to: https://api.slack.com/apps.
2. Select **Create New App**.
3. Click "From scratch"
3. Enter App Name and select workspace that should host your app.

<img alt="Slack Applications Screenshot" src={useBaseUrl('img/integrations-slack-1.png')} width="400px" />

4. Go to the **OAuth & Permissions** tab on the sidebar and click **Add New Redirect URL**.
    - Enter the value `https://<subdomain>.local.lt/auth/slack/callback`, where `<subdomain>` is your selected localtunnel subdomain.
    - Slack requires us to use HTTPS even when developing, [read below](#slack-https) how to set it up.

4. Hit **Save URLs**.
5. Go to **Basic Information** tab
6. Hit **Show** next to **Client Secret**
6. Copy your Client ID and Client Secret as you'll need them in the next step.

:::tip

Be precise with your redirect URL. Slack’s redirect URLs are case-sensitive and sensitive to trailing slashes.
For example, `https://your-app.loca.lt/auth/slack/callback` and `https://your-app.loca.lt/auth/slack/callback/` are **not** the same.
:::

### 4. Adding Environment Variables

Add these environment variables to the `.env.server` file at the root of your project (take their values from the previous step):

```bash title=".env.server"
SLACK_CLIENT_ID=your-slack-client-id
SLACK_CLIENT_SECRET=your-slack-client-secret
```

### 5. Adding the Necessary Routes and Pages

Let's define the necessary authentication Routes and Pages.

Add the following code to your `main.wasp.ts` file:

```ts title="main.wasp.ts"
import { app, page, route } from "@wasp.sh/spec"
import { LoginPage } from "./src/pages/auth" with { type: "ref" }

export default app({
  // ...
  spec: [
    route("LoginRoute", "/login", page(LoginPage)),
  ],
})
```

We'll define the React components for these pages in the `src/pages/auth.{jsx,tsx}` file below.

### 6. Creating the Client Pages

<SocialLoginClientPages />

### Conclusion

Yay, we've successfully set up Slack Auth! 🎉

![Slack Auth](/img/auth/slack.png)

Running `wasp db migrate-dev` and `wasp start` should now give you a working app with authentication.
To see how to protect specific pages (i.e., hide them from non-authenticated users), read the docs on [using auth](../../auth/overview).

## Developing with Slack auth and HTTPS {#slack-https}

Unlike most OAuth providers, Slack **requires HTTPS and publicly accessible URL for the OAuth redirect URL**.
This means that we can't simply use `localhost:3001` as a base host for redirect urls. Instead, we need to configure
Wasp server to be publicly available under HTTPS, even in the local development environment.

Fortunately, there are quite a few free and convenient tools available to simplify the process, such as
[localtunnel.me](https://localtunnel.me/) (free) and [ngrok.com](https://ngrok.com) (lots of features,
but free tier is limited).

<Collapse title="Using localtunnel">

Install localtunnel globally with `npm install -g localtunnel`.

Start a tunnel with `lt --port 3001 -s <subdomain>`, where `<subdomain>` is a unique subdomain you would like to have.

:::info Subdomain option

Usually localtunnel will assign you a random subdomain on each start, but you can specify it with the `-s` flag.
Doing it this way will make it easier to remember the URL and will also make it easier to set up the redirect URL
in Slack app settings.

:::

After starting the tunnel, you will see your tunnel URL in the terminal. Go to that URL to unlock the tunnel by entering your IP address
in a field that appears on the page the first time you open it in the browser. This is a basic anti-abuse mechanism. If you're not sure
what your IP is, you can find it by running `curl ifconfig.me` or going to [ifconfig.me](https://ifconfig.me).

Now that your server is exposed to the public, we need to configure Wasp to use the new public domain. This needs to be done in two places:
server and client configuration.

To configure client, add this line to your `.env.client` file (create it if doesn't exist):
```bash title=".env.client"
REACT_APP_API_URL=https://<subdomain>.loca.lt
```

Similarly, to configure the server, add this line to your `.env.server`:
```bash title=".env.server"
WASP_SERVER_URL=https://<subdomain>.loca.lt
```

</Collapse>

## Default Behaviour

Add `slack: {}` to the `auth.methods` object to use it with default settings.

```ts title="main.wasp.ts"
import { app } from "@wasp.sh/spec"

export default app({
  name: "myApp",
  wasp: { version: "{latestWaspVersion}" },
  title: "My App",
  head: ["<link rel='icon' href='/favicon.ico' />"],
  auth: {
    userEntity: "User",
    methods: {
      // highlight-next-line
      slack: {}
    },
    onAuthFailedRedirectTo: "/login"
  },
  // ...
})
```

<DefaultBehaviour />

## Overrides

<OverrideIntro />

### Data Received From Slack

We are using Slack's API and its `/openid.connect.userInfo` endpoint to get the user data.

The data we receive from Slack on the `/openid.connect.userInfo` endpoint looks something like this:

```json
{
    "ok": true,
    "sub": "U0R7JM",
    "https://slack.com/user_id": "U0R7JM",
    "https://slack.com/team_id": "T0R7GR",
    "email": "krane@slack-corp.com",
    "email_verified": true,
    "date_email_verified": 1622128723,
    "name": "krane",
    "picture": "https://secure.gravatar.com/....png",
    "given_name": "Bront",
    "family_name": "Labradoodle",
    "locale": "en-US",
    "https://slack.com/team_name": "kraneflannel",
    "https://slack.com/team_domain": "kraneflannel",
    "https://slack.com/user_image_24": "...",
    "https://slack.com/user_image_32": "...",
    "https://slack.com/user_image_48": "...",
    "https://slack.com/user_image_72": "...",
    "https://slack.com/user_image_192": "...",
    "https://slack.com/user_image_512": "...",
    "https://slack.com/team_image_34": "...",
    "https://slack.com/team_image_44": "...",
    "https://slack.com/team_image_68": "...",
    "https://slack.com/team_image_88": "...",
    "https://slack.com/team_image_102": "...",
    "https://slack.com/team_image_132": "...",
    "https://slack.com/team_image_230": "...",
    "https://slack.com/team_image_default": true
}
```

The fields you receive depend on the scopes you request. In the example above, the scope includes `email`, `profile` and `openid`. By default, only `openid` is requested. See below for instructions on how to request additional scopes.

<small>
  For an up to date info about the data received from Slack, please refer to the [Slack API documentation](https://api.slack.com/methods/openid.connect.userInfo).
</small>

### Using the Data Received From Slack

<OverrideExampleIntro />

```ts title="main.wasp.ts"
import { app } from "@wasp.sh/spec"
import { config, userSignupFields } from "./src/auth/slack" with { type: "ref" }

export default app({
  name: "myApp",
  wasp: { version: "{latestWaspVersion}" },
  title: "My App",
  head: ["<link rel='icon' href='/favicon.ico' />"],
  auth: {
    userEntity: "User",
    methods: {
      slack: {
        // highlight-next-line
        configFn: config,
        // highlight-next-line
        userSignupFields
      }
    },
    onAuthFailedRedirectTo: "/login"
  },
  // ...
})
```

```prisma title="schema.prisma"
model User {
  id          Int    @id @default(autoincrement())
  username    String @unique
  avatarUrl   String
}

// ...
```

```ts title="src/auth/slack.ts" auto-js
import { defineUserSignupFields } from "wasp/server/auth"

export function config() {
  console.log("Inside user-supplied Slack config")
  return {
    scopes: ["openid", "email", "profile"],
  }
}

export const userSignupFields = defineUserSignupFields({
  username: (data: any) => data.profile.name,
  avatarUrl: (data: any) => data.profile.picture,
})
```

<GetUserFieldsType />

## Using Auth

<UsingAuthNote />

When you receive the `user` object [on the client or the server](../overview.md#accessing-the-logged-in-user), you'll be able to access the user's Slack ID like this:

<SlackData />

<AccessingUserDataNote />

## API Reference

<CardLink
  to="../../api/@wasp.sh/spec/interfaces/SocialAuthConfig"
  kind="api"
  title="SocialAuthConfig"
  description="All the options for the slack auth method."
/>

For the provider-specific behavior of the `configFn` and `userSignupFields` functions, check the [Overrides section](#overrides). For behavior common to all providers, check the [Social Auth Overview](./overview.md).
